--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,11 +6,50 @@
             type="com.matuszew.braintri_tumblr.login.LoginViewModel">
         </variable>
     </data>
-
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        style="@style/Activity.BackgroundDark"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         tools:context="com.matuszew.braintri_tumblr.login.LoginActivity">
-    </android.support.constraint.ConstraintLayout>
+
+        <ImageView
+            style="@style/Login.Logo"
+            android:id="@+id/tumblr_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <android.support.design.widget.TextInputLayout
+            style="@style/EditText.DarkBackground.Large"
+            android:id="@+id/login_username_layout"
+            android:layout_below="@id/tumblr_logo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/login_edittext_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/space_xxxxl"
+                android:layout_marginRight="@dimen/space_xxxxl"
+                android:imeOptions="actionDone"
+                android:text="@={vm.username}"
+                android:hint="@string/login_username_hint"
+                android:inputType="textNoSuggestions|textVisiblePassword"
+                />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            style="@style/Login.SubmitButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/login_username_layout"
+            android:text="@string/login_submit_button"
+            android:onClick="@{(view) -> vm.previewPosts()}"
+            />
+
+    </RelativeLayout>
 </layout>
