--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,22 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+
+    <!-- Font sizes -->
+    <dimen name="font_xs">10sp</dimen>
+    <dimen name="font_sm">11sp</dimen>
+    <dimen name="font_md">12sp</dimen>
+    <dimen name="font_lg">14sp</dimen>
+    <dimen name="font_xl">18sp</dimen>
+
+    <!-- Padding sizes -->
+    <dimen name="space_xs">5dp</dimen>
+    <dimen name="space_sm">10dp</dimen>
+    <dimen name="space_md">15dp</dimen>
+    <dimen name="space_lg">20dp</dimen>
+    <dimen name="space_xl">25dp</dimen>
+    <dimen name="space_xxl">30dp</dimen>
+    <dimen name="space_xxxl">35dp</dimen>
+    <dimen name="space_xxxxl">40dp</dimen>
 </resources>
