--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorBlue">#529ecc</color>
+    <color name="colorBeige">#FFDCD7CC</color>
 </resources>
