--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,10 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorBlue">#529ecc</color>
+    <color name="colorGreen">#56bc8a</color>
+    <color name="colorViolet">#a77dc2</color>
+    <color name="colorOrange">#f2992e</color>
+    <color name="colorDarkBlue">#36465d</color>
+    <color name="colorLightRed">#d95e40</color>
     <color name="colorBeige">#FFDCD7CC</color>
 </resources>
