--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="font_md">12sp</dimen>
     <dimen name="font_lg">14sp</dimen>
     <dimen name="font_xl">18sp</dimen>
+    <dimen name="font_xxl">36sp</dimen>
 
     <!-- Padding sizes -->
     <dimen name="space_xs">5dp</dimen>
@@ -24,4 +25,5 @@
 
     <dimen name="post_list_item_height">110dp</dimen>
     <dimen name="post_list_item_vertical_margin">8dp</dimen>
+
 </resources>
