--- a/app/src/main/res/layout/partial_post_item.xml
+++ b/app/src/main/res/layout/partial_post_item.xml
@@ -21,11 +21,26 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:orientation="vertical"
                 >
+                <TextView
+                    style="@style/CustomCardView.Header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{vm.model.id}" />
+                <TextView
+                    style="@style/CustomCardView.SubHeader"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{vm.model.type}"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{vm.id}" />
+                    android:text="@{vm.model.date}"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{vm.model.url}"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
