--- a/app/src/main/res/layout/partial_post_details_photo.xml
+++ b/app/src/main/res/layout/partial_post_details_photo.xml
@@ -48,6 +48,6 @@
             imageFromUrl="@{vm.model.photoUrl1280}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="center" />
+            android:scaleType="fitCenter" />
     </LinearLayout>
 </layout>
