Braintri-15 : Applied better look for posts list

--- a/app/src/main/res/layout/activity_posts_list.xml
+++ b/app/src/main/res/layout/activity_posts_list.xml
@@ -6,7 +6,7 @@
             type="com.matuszew.braintri_tumblr.posts.list.PostsListViewModel"/>
     </data>
     <RelativeLayout
-        style="@style/Activity.BackgroundBeige"
+        style="@style/Activity.BackgroundDark"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
