--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,9 +21,16 @@
     <dimen name="space_xxxl">35dp</dimen>
     <dimen name="space_xxxxl">40dp</dimen>
 
-    <!-- CardView Height -->
+    <!-- CardView -->
+    <dimen name="card_view_elevation">10dp</dimen>
 
-    <dimen name="post_list_item_height">120dp</dimen>
+    <!-- CardView Post Item -->
+    <dimen name="post_list_item_height">220dp</dimen>
     <dimen name="post_list_item_vertical_margin">8dp</dimen>
 
+    <dimen name="post_list_item_header_height">110dp</dimen>
+
+    <!-- Post Item Image -->
+    <dimen name="post_item_width">50dp</dimen>
+    <dimen name="post_item_height">50dp</dimen>
 </resources>
