Braintri-16 : Added architectural skeleton for fragments ( to use in future ), updated look for audio, photo posts

--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -7,6 +7,7 @@
     </data>
 
     <RelativeLayout
+        style="@style/Activity.BackgroundDark"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
