--- a/app/src/main/res/layout/partial_post_details_audio.xml
+++ b/app/src/main/res/layout/partial_post_details_audio.xml
@@ -1,50 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout >
     <data>
         <variable
             name="vm"
             type="com.matuszew.braintri_tumblr.posts.details.PostDetailsContract.ViewModel"/>
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        android:fillViewport="true">
         <LinearLayout
-            style="@style/LinearLayout.Header.LightRed"
-            android:id="@+id/heading_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                style="@style/TextView.Header.Light"
-                android:id="@+id/tv_heading"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollHorizontally="true"
-                android:text="@{vm.model.conversationTitle}" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                style="@style/TextView.SubHeader"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{vm.model.date}"/>
-        </LinearLayout>
-
-
-        <WebView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            htmlContent="@{vm.model.audioEmbed}">
-        </WebView>
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <android.support.v7.widget.CardView
+                style="@style/CustomCardView.Container"
+                android:id="@+id/post_details_card_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="@dimen/card_view_elevation"
+                app:cardPreventCornerOverlap="false">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        style="@style/CustomCardView.Header"
+                        android:background="@{vm.headerBackground}"
+                        android:id="@+id/post_card_header"
+                        android:layout_width="match_parent">
+
+                        <ImageView
+                            style="@style/ImageView.HeaderImage"
+                            android:id="@+id/post_type_icon"
+                            android:layout_centerInParent="true"
+                            android:src="@{vm.icon}"/>
+
+                    </RelativeLayout>
+                    <TextView
+                        style="@style/TextView.SubHeader"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{vm.date}"/>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                style="@style/TextView.ContainerHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/post_details_content_header"/>
+
+            <android.support.v7.widget.CardView
+                style="@style/CustomCardView.Container"
+                android:id="@+id/post_details_card_content"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/post_details_container_embedded_audio_height"
+                app:cardElevation="@dimen/card_view_elevation"
+                app:cardPreventCornerOverlap="false">
+
+                <WebView
+                    htmlContent="@{vm.model.audioEmbed}"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"></WebView>
+
+            </android.support.v7.widget.CardView>
+
+
+            <TextView
+                style="@style/TextView.ContainerHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/post_details_content_header"/>
+
+            <android.support.v7.widget.CardView
+                style="@style/CustomCardView.Container"
+                android:id="@+id/post_details_card_subheader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="@dimen/card_view_elevation"
+                app:cardPreventCornerOverlap="false">
+
+                <RelativeLayout
+                    style="@style/RelativeLayout.Details"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        style="@style/ImageView.ContainerIcon"
+                        android:id="@+id/audio_details_icon"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/music"/>
+                    <TextView
+                        style="@style/TextView.Centered"
+                        android:id="@+id/audio_artist"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@+id/audio_details_icon"
+                        android:text="@{vm.model.id3Artist}"/>
+                    <TextView
+                        style="@style/TextView.Centered"
+                        android:id="@+id/audio_title"
+                        android:textStyle="bold"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/audio_artist"
+                        android:layout_toEndOf="@+id/audio_details_icon"
+                        android:text="@{vm.model.id3Title}"/>
+                    <TextView
+                        style="@style/TextView.Centered"
+                        android:id="@+id/audio_album"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/audio_title"
+                        android:layout_toEndOf="@+id/audio_details_icon"
+                        android:text="@{vm.model.id3Album}"/>
+                    <TextView
+                        style="@style/TextView.Centered"
+                        android:id="@+id/audio_year"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/audio_album"
+                        android:layout_toEndOf="@+id/audio_details_icon"
+                        android:text="@{vm.model.id3Year}"/>
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                style="@style/LinearLayout.Container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                postTags="@{vm.model.tags}">
+            </LinearLayout>
+
+            <TextView
+                style="@style/TextView.ContainerElement"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{vm.notes}"/>
+        </LinearLayout>
+    </ScrollView>
+
 </layout>
