--- a/app/src/main/res/layout/partial_post_details_photo.xml
+++ b/app/src/main/res/layout/partial_post_details_photo.xml
@@ -8,46 +8,88 @@
             type="com.matuszew.braintri_tumblr.posts.details.PostDetailsContract.ViewModel" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        android:fillViewport="true">
         <LinearLayout
-            android:id="@+id/heading_layout"
-            style="@style/LinearLayout.Header.Orange"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_heading"
-                style="@style/TextView.Header.Light"
-                htmlText="@{vm.model.photoCaption}"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollHorizontally="true" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                style="@style/TextView.SubHeader"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{vm.model.date}" />
-        </LinearLayout>
-
-
-        <ImageView
-            android:id="@+id/tv_subheading"
-            imageFromUrl="@{vm.model.photoUrl1280}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter" />
-    </LinearLayout>
+            android:orientation="vertical">
+
+            <android.support.v7.widget.CardView
+                style="@style/CustomCardView.Container"
+                android:id="@+id/post_details_card_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="@dimen/card_view_elevation"
+                app:cardPreventCornerOverlap="false">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        style="@style/CustomCardView.Header"
+                        android:background="@{vm.headerBackground}"
+                        android:id="@+id/post_card_header"
+                        android:layout_width="match_parent">
+
+                        <ImageView
+                            style="@style/ImageView.HeaderImage"
+                            android:id="@+id/post_type_icon"
+                            android:layout_centerInParent="true"
+                            android:src="@{vm.icon}"/>
+
+                    </RelativeLayout>
+                    <TextView
+                        style="@style/TextView.SubHeader"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{vm.date}"/>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                style="@style/TextView.ContainerHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/post_details_content_header"/>
+
+            <android.support.v7.widget.CardView
+                style="@style/CustomCardView.Container"
+                android:id="@+id/post_details_card_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="@dimen/card_view_elevation"
+                app:cardPreventCornerOverlap="false">
+
+                <ImageView
+                    android:id="@+id/tv_subheading"
+                    imageFromUrl="@{vm.model.photoUrl1280}"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter" />
+
+            </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                style="@style/LinearLayout.Container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                postTags="@{vm.model.tags}">
+            </LinearLayout>
+
+            <TextView
+                style="@style/TextView.ContainerElement"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{vm.notes}"/>
+        </LinearLayout>
+    </ScrollView>
 </layout>
