--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,11 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!-- Font sizes -->
+
     <dimen name="font_xs">10sp</dimen>
     <dimen name="font_sm">11sp</dimen>
     <dimen name="font_md">12sp</dimen>
@@ -12,6 +14,7 @@
     <dimen name="font_xxl">36sp</dimen>
 
     <!-- Padding sizes -->
+
     <dimen name="space_xs">5dp</dimen>
     <dimen name="space_sm">10dp</dimen>
     <dimen name="space_md">15dp</dimen>
@@ -22,15 +25,27 @@
     <dimen name="space_xxxxl">40dp</dimen>
 
     <!-- CardView -->
+
     <dimen name="card_view_elevation">10dp</dimen>
 
     <!-- CardView Post Item -->
+
+    <dimen name="post_details_container_height">50dp</dimen>
+
+    <dimen name="post_details_container_embedded_audio_height">100dp</dimen>
+
     <dimen name="post_list_item_height">220dp</dimen>
     <dimen name="post_list_item_vertical_margin">8dp</dimen>
 
     <dimen name="post_list_item_header_height">110dp</dimen>
 
     <!-- Post Item Image -->
+
     <dimen name="post_item_width">50dp</dimen>
     <dimen name="post_item_height">50dp</dimen>
+
+    <!-- Post Details Image -->
+
+    <dimen name="post_details_section_image_width">40dp</dimen>
+    <dimen name="post_details_section_image_height">30dp</dimen>
 </resources>
