--- a/app/src/main/res/layout/partial_post_details_regular.xml
+++ b/app/src/main/res/layout/partial_post_details_regular.xml
@@ -6,51 +6,110 @@
             type="com.matuszew.braintri_tumblr.posts.details.PostDetailsContract.ViewModel"/>
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-            <LinearLayout
-            style="@style/LinearLayout.Header.Green"
-            android:id="@+id/heading_layout"
+        android:fillViewport="true">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                style="@style/TextView.Header.Light"
-                android:id="@+id/tv_heading"
+            <android.support.v7.widget.CardView
+                style="@style/CustomCardView.Container"
+                android:id="@+id/post_details_card_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scrollHorizontally="true"
-                android:text="@{vm.model.regularTitle}" />
+                app:cardElevation="@dimen/card_view_elevation"
+                app:cardPreventCornerOverlap="false">
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    style="@style/TextView.SubHeader"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{vm.model.date}"/>
-            </LinearLayout>
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fillViewport="true">
-                <TextView
-                    style="@style/TextView.Content"
-                    android:id="@+id/tv_subheading"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    htmlText="@{vm.model.regularBody}"/>
-            </ScrollView>
+                    android:orientation="vertical">
 
+                    <RelativeLayout
+                        style="@style/CustomCardView.Header"
+                        android:background="@{vm.headerBackground}"
+                        android:id="@+id/post_card_header"
+                        android:layout_width="match_parent">
+
+                        <ImageView
+                            style="@style/ImageView.HeaderImage"
+                            android:id="@+id/post_type_icon"
+                            android:layout_centerInParent="true"
+                            android:src="@{vm.icon}"/>
+
+                    </RelativeLayout>
+                    <TextView
+                        style="@style/TextView.SubHeader"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{vm.date}"/>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                style="@style/TextView.ContainerHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/post_details_title_header"/>
+
+            <android.support.v7.widget.CardView
+                style="@style/CustomCardView.Container"
+                android:id="@+id/post_details_card_subheader_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="@dimen/card_view_elevation"
+                app:cardPreventCornerOverlap="false">
+
+                <TextView
+                    style="@style/TextView.Content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    htmlText="@{vm.model.regularTitle}"/>
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                style="@style/TextView.ContainerHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/post_details_body_header"/>
+
+            <android.support.v7.widget.CardView
+                style="@style/CustomCardView.Container"
+                android:id="@+id/post_details_card_subheader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="@dimen/card_view_elevation"
+                app:cardPreventCornerOverlap="false">
+
+                <TextView
+                    style="@style/TextView.Content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    htmlTextNonEscaped="@{vm.model.regularBody}"/>
+
+            </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                style="@style/LinearLayout.Container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                postTags="@{vm.model.tags}">
+            </LinearLayout>
+
+            <TextView
+                style="@style/TextView.ContainerElement"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{vm.notes}"/>
         </LinearLayout>
+    </ScrollView>
 
 </layout>
