Braintri-21 : Added video type post handling with layout

--- a/app/src/main/res/layout/partial_post_details_link.xml
+++ b/app/src/main/res/layout/partial_post_details_link.xml
@@ -111,12 +111,13 @@
 
             </android.support.v7.widget.CardView>
 
-            <LinearLayout
+            <com.google.android.flexbox.FlexboxLayout
                 style="@style/LinearLayout.Container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:flexWrap="wrap"
                 postTags="@{vm.model.tags}">
-            </LinearLayout>
+            </com.google.android.flexbox.FlexboxLayout>
 
             <TextView
                 style="@style/TextView.ContainerElement"
