--- a/app/src/main/res/layout/partial_post_details_video.xml
+++ b/app/src/main/res/layout/partial_post_details_video.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout >
     <data>
         <variable
             name="vm"
@@ -56,21 +56,21 @@
                 style="@style/TextView.ContainerHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/post_details_title_header"/>
+                android:text="@string/post_details_content_header"/>
 
+            <!-- TODO CONSIDER USING EXOPLAYER HERE -->
             <android.support.v7.widget.CardView
                 style="@style/CustomCardView.Container"
-                android:id="@+id/post_details_card_subheader_title"
+                android:id="@+id/post_details_card_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/post_details_container_embedded_video_height"
                 app:cardElevation="@dimen/card_view_elevation"
                 app:cardPreventCornerOverlap="false">
 
-                <TextView
-                    style="@style/TextView.Content"
+                <WebView
+                    htmlContent="@{vm.model.videoPlayer}"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    htmlText="@{vm.model.regularTitle}"/>
+                    android:layout_height="match_parent"></WebView>
 
             </android.support.v7.widget.CardView>
 
@@ -78,7 +78,7 @@
                 style="@style/TextView.ContainerHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/post_details_body_header"/>
+                android:text="@string/post_details_caption_header"/>
 
             <android.support.v7.widget.CardView
                 style="@style/CustomCardView.Container"
@@ -92,7 +92,7 @@
                     style="@style/TextView.Content"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    htmlTextNonEscaped="@{vm.model.regularBody}"/>
+                    htmlText="@{vm.model.videoCaption}"/>
 
             </android.support.v7.widget.CardView>
 
