--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,6 +33,7 @@
     <dimen name="post_details_container_height">50dp</dimen>
 
     <dimen name="post_details_container_embedded_audio_height">100dp</dimen>
+    <dimen name="post_details_container_embedded_video_height">225dp</dimen>
 
     <dimen name="post_list_item_height">220dp</dimen>
     <dimen name="post_list_item_vertical_margin">8dp</dimen>
