--- a/app/src/main/res/layout/partial_post_details_link.xml
+++ b/app/src/main/res/layout/partial_post_details_link.xml
@@ -40,7 +40,7 @@
                             style="@style/ImageView.HeaderImage"
                             android:id="@+id/post_type_icon"
                             android:layout_centerInParent="true"
-                            android:src="@{vm.icon}"/>
+                            srcVector="@{vm.icon}"/>
 
                     </RelativeLayout>
                     <TextView
@@ -62,7 +62,7 @@
             <android.support.design.widget.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/link_variant"
+                app:srcCompat="@drawable/link_variant"
                 android:tint="@android:color/white"
                 android:layout_gravity="center"
                 android:onClick="@{() -> vm.navigateToUrl()}"
