--- a/app/src/main/res/layout/partial_post_details_photo.xml
+++ b/app/src/main/res/layout/partial_post_details_photo.xml
@@ -42,7 +42,7 @@
                             style="@style/ImageView.HeaderImage"
                             android:id="@+id/post_type_icon"
                             android:layout_centerInParent="true"
-                            android:src="@{vm.icon}"/>
+                            srcVector="@{vm.icon}"/>
 
                     </RelativeLayout>
                     <TextView
@@ -70,9 +70,9 @@
 
                 <ImageView
                     android:id="@+id/tv_subheading"
-                    imageFromUrl="@{vm.model.photoUrl1280}"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    imageFromUrl="@{vm.model.photoUrl500}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:scaleType="fitCenter" />
 
             </android.support.v7.widget.CardView>
